2009-12-07  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Improve the autotests of QtWebkit
        https://bugs.webkit.org/show_bug.cgi?id=32216

        Refactor the test of QGraphicsWebView:
        -make waitForSignal() available to all the tests.
        -remove QTest::qWait()

        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (tst_QGraphicsWebView::crashOnViewlessWebPages):
        * tests/util.h:
        (waitForSignal):

2009-12-07  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Simon Hausmann.

        [Qt] Plugins: Force windowless mode when there is no native window handle
        
        Inject wmode=opaque while instantiating the plugin for the case when the
        webpage is not backed by a native window handle.
        
        https://bugs.webkit.org/show_bug.cgi?id=32059

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin):

2009-12-04  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Corrects QtLauncher style

        * QtLauncher/main.cpp:
        (WebPage::acceptNavigationRequest):
        (MainWindow::MainWindow):
        (MainWindow::webPage):
        (MainWindow::webView):
        (MainWindow::changeLocation):
        (MainWindow::loadFinished):
        (MainWindow::showLinkHover):
        (MainWindow::zoomIn):
        (MainWindow::zoomOut):
        (MainWindow::print):
        (MainWindow::setEditable):
        (MainWindow::dumpHtml):
        (MainWindow::selectElements):
        (MainWindow::newWindow):
        (MainWindow::setupUI):
        (WebPage::createWindow):
        (WebPage::createPlugin):
        (main):

2009-12-04  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtLauncher: add a menu to show or hide the web inspector.